# mouse-fix-double-click

./: README.md  package.json
.cursor/: mcp.json
.cursor/rules/: project-overview.mdc  svelte-instructions.mdc
.github/workflows/: release.yml  test-build.yml
scripts/: commit.sh  push.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/commands/: mouse.rs  system.rs
src-tauri/src/mouse_filter/: macos.rs  mod.rs  unsupported.rs
src/lib/api/: mouseFilter.ts
src/lib/components/: FilterDashboard.svelte
src/lib/components/ui/label/: index.ts  label.svelte
src/lib/components/ui/switch/: index.ts  switch.svelte
tools/: how-to-gen-task.md
