[package]
name = "mouse_fix_double_click"
version = "0.1.0"
description = "Global double-click suppression utility powered by Tauri 2 and Svelte 5."
authors = ["octopuslowtech"]
license = "MIT"
repository = "octopuslowtech/mouse-fix-double-click"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
thiserror = "2.0.12"
once_cell = "1.19.0"
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
core-graphics = "0.24.0"
